@@ -11,5 +11,5 @@ if [ -e $tarFile ]; then
 fi
 
 # We don't need to actually submit a job, but still need to provide some dummy arguments to prun
-prun --exec "echo" --tmpDir=$tmpDir --outTarBall=$tarFile --useRootCore --noSubmit --athenaTag=17.0.5.5 --outDS=user.Steve.DummyDoesNothing
+prun --exec "echo" --tmpDir=$tmpDir --outTarBall=$tarFile --useRootCore --noSubmit --athenaTag=17.0.5.5 --outDS=user.sfarrell.DummyDoesNothing
 
